--- a/sass/global.scss
+++ b/sass/global.scss
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 body {
   background-color: hsl(217, 54%, 11%);
+  font-family: "Outfit";
 }
 main {
   width: 100%;
