--- a/sass/component.scss
+++ b/sass/component.scss
@@ -9,11 +9,28 @@
     width: 300px;
     height: 300px;
     display: block;
-    border: solid 1px red;
     border-radius: 10px;
     background-image: url(../images/image-equilibrium.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    .active-states {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      img {
+        visibility: hidden;
+      }
+      &:hover {
+        cursor: pointer;
+        background-color: hsl(178, 100%, 50%, 50%);
+        img {
+          visibility: visible;
+        }
+      }
+    }
   }
   .card-body {
     display: flex;
@@ -21,12 +38,53 @@
     width: 100%;
     .card-title {
       color: hsl(0, 0%, 100%);
+      &:hover {
+        cursor: pointer;
+        color: hsl(178, 100%, 50%);
+      }
     }
     .card-text {
       color: hsl(215, 51%, 70%);
     }
     .card-footer {
       border-top: solid 1px hsl(215, 32%, 27%);
+    }
+  }
+  .card-price {
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .price {
+      display: flex;
+      align-items: center;
+      color: hsl(178, 100%, 50%);
+      gap: 0.5rem;
+    }
+    .time {
+      display: flex;
+      align-items: center;
+      color: hsl(215, 51%, 70%);
+      gap: 0.5rem;
+    }
+  }
+  .card-footer {
+    display: flex;
+    padding: 0.25rem;
+    color: hsl(215, 51%, 70%);
+    flex-direction: row;
+    align-items: center;
+    gap: 0.25rem;
+    img {
+      width: 2.06rem;
+      border: solid 2px white;
+      border-radius: 50%;
+    }
+    span {
+      &:hover {
+        cursor: pointer;
+        color: hsl(178, 100%, 50%);
+      }
     }
   }
 }
